race between QueryStageBatchedDeleteTest dbtest and Checkpointer background job

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.3.0-rc0, 6.0.11
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • v6.0
    • Execution Team 2023-01-09
    • 166
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The QueryStageBatchedDeleteTest test fixture replaces the tick source on the global service context which is also needed by the Checkpointer thread to create operation contexts. Since each dbtest suite are run in a different process, it should be ok to avoid this race condition by disabling the checkpoint thread before overriding the global tick source.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: