SERVER-72487 QueryStageBatchedDeleteTest test fixture disables checkpoint thread before installing tick source